--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
          <a class="footer-link" href="https://twitter.com/">Twitter</a>
          <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
          <p>© 2019 Oscar Herrada.</p>
+         <div>Free vector art via <a rel="nofollow" href="https://www.vecteezy.com/">Vecteezy</a></div>
          <div>Icons made by <a href="https://www.freepik.com/?__hstc=57440181.2aff5be4d0f5ec4591611f8ff610e08c.1558229996609.1558229996609.1558265116243.2&__hssc=57440181.17.1558265116243&__hsfp=2517661048" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" 		    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 		    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 
        </div>
