--- a/index.html
+++ b/index.html
@@ -3,53 +3,47 @@
   <head>
     <meta charset="utf-8">
     <title>divex</title>
-    <link rel="stylesheet" href=" https://oherrada.github.io/cv-2019/styles.css"> 
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Overpass|Permanent+Marker&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="css/styles2.css">
+    <link href="https://fonts.googleapis.com/css?family=Courgette|Cuprum|Pacifico&display=swap" rel="stylesheet">
   </head>
    <body>
-     <div class="container1">
-         <img class="city" src="city.png" alt="city">
-         <img class="cloud1" src="cloud.png" alt="cloud-img">
-         <h1 class="name">I'm Oscar</h1>
-         <p class="dev">a developer.</p>
-         <img class="cloud2" src="cloud.png" alt="cloud-img">
-
+     <div class="city">
+      <img class="cloud1" src="cloud.png" alt="cloud-img">
+        <div class="name">I'm Oscar</div>
+        <div class="dev">a developer</div>
+      <img class="cloud2" src="cloud.png" alt="cloud-img">
+     </div>
+     <hr class="orangehr">
+     <div class="middle-container">
+      <div class="profile">
+       <img class="OHLogo" src="suit_businessman.png" alt="logo">
+       <h2>Hello.</h2>
+       <p>My name is Oscar Herrada I am a <em><strong>Web Developer</strong></em>, <em><strong>Author</strong></em>, and owner of <em><strong>educatinglittleminds.</strong></em></p>
+      </div>
+        <hr class="yellowhr">
+       <div class="skills">
+        <h2>My Skills.</h2>
+       <div class="skill-row">
+        <img class="devimg" src="html.png" alt="devimg">
+        <h3>Web Development</h3>
+        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
        </div>
-        <div class="toptier">
-
-       </div>
-       <hr class="orangehr">
-       <div class="middle-container">
-         <div class="profile">
-           <img class="OHLogo" src="suit_businessman.png" alt="logo">
-           <h2>Hello.</h2>
-           <p>My name is Oscar Herrada I am a <em><strong>Web Developer</strong></em>, <em><strong>Author</strong></em>, and owner of <em><strong>educatinglittleminds.</strong></em></p>
+       <div class="skill-row">
+         <img class="" src="" alt="">
+        <div class="space">
+        </div>
+         <h3>Owner</h3>
+         <p>Owner of educatinglittleminds an eduaction based company aiming to provide quality books, teaching resources, and apps at an affordable cost.</p>
+         <hr class="orangehr">
+        <div class="container2">
+         <div>
+          <img class="artist" src="pen.png" alt="pen">
          </div>
-         <hr class="yellowhr">
-         <div class="skills">
-           <h2>My Skills.</h2>
-           <div class="skill-row">
-             <img class="devimg" src="html.png" alt="devimg">
-             <h3>Web Development</h3>
-             <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
-           </div>
-           <div class="skill-row">
-             <img class="" src="" alt="">
-             <div class="space">
-               </div>
-             <h3>Owner</h3>
-             <p>Owner of educatinglittleminds an eduaction based company aiming to provide quality books, teacing resources, and apps at an affordable cost.</p>
-             <hr class="orangehr">
-            <div class="container2">
-               <div>
-               <img class="artist" src="pen.png" alt="pen">
-             </div>
-              <img class="pencil" src="pencil.png" alt="pencil" id="pencil1">
-            </div>
-             <h3>Author</h3>
-             <p>In an attempt to break from self-made limitations I decided to become an author, illustrating and writing educational books.
-           </div>
+          <img class="pencil" src="pencil.png" alt="pencil" id="pencil1">
+         </div>
+          <h3>Author</h3>
+          <p>In an attempt to break from self-made limitations I decided to become an author, illustrating and writing educational books.
+         </div>
          </div>
          <hr class="yellowhr">
          <div class="contact-me">
@@ -59,20 +53,15 @@
           <img class="contact" src="icons/png/020-adaptive.png" alt="contact">
           <br>
            <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+          </div>
          </div>
-       </div>
-
-
-       <div class="bottom-container">
-         <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-         <a class="footer-link" href="https://twitter.com/">Twitter</a>
-         <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-         <p>© 2019 Oscar Herrada.</p>
-         <div>Free vector art via <a rel="nofollow" href="https://www.vecteezy.com/">Vecteezy</a></div>
+         <div class="bottom-container">
+          <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+          <a class="footer-link" href="https://twitter.com/">Twitter</a>
+          <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+          <p>© 2019 Oscar Herrada.</p>
          <div>Icons made by <a href="https://www.freepik.com/?__hstc=57440181.2aff5be4d0f5ec4591611f8ff610e08c.1558229996609.1558229996609.1558265116243.2&__hssc=57440181.17.1558265116243&__hsfp=2517661048" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" 		    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 		    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
-
-       </div>
-      </div>
-
-   </body>
-  </html>
+         </div>
+         </div>
+     </body>
+    </html>
