--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>divex</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://github.com/oherrada/cv-2019/blob/master/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Courgette|Cuprum|Pacifico&display=swap" rel="stylesheet">
   </head>
    <body>
