update to stylesheet
updating font-style on page.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>divex</title>
     <link rel="stylesheet" href="https://oherrada.github.io/cv-2019/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Courgette|Cuprum|Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Overpass|Permanent+Marker&display=swap" rel="stylesheet">
   </head>
    <body>
      <div class="city">
