--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>divex</title>
     <link rel="stylesheet" href="https://oherrada.github.io/cv-2019/styles.css">
-    <link href="<link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace|Overpass|Shadows+Into+Light&display=swap" rel="stylesheet">" 
+    <link href="<link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace|Overpass|Shadows+Into+Light&display=swap" rel="stylesheet">
   </head>
    <body>
      <div class="city">
