--- a/index.html
+++ b/index.html
@@ -1,67 +1,77 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>divex</title>
-    <link rel="stylesheet" href="https://oherrada.github.io/cv-2019/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace|Overpass|Shadows+Into+Light&display=swap" rel="stylesheet">
-  </head>
-   <body>
-     <div class="city">
-      <img class="cloud1" src="cloud.png" alt="cloud-img">
-        <div class="name">I'm Oscar</div>
-        <div class="dev">a developer</div>
-      <img class="cloud2" src="cloud.png" alt="cloud-img">
-     </div>
-     <hr class="orangehr">
-     <div class="middle-container">
-      <div class="profile">
-       <img class="OHLogo" src="suit_businessman.png" alt="logo">
-       <h2>Hello.</h2>
-       <p>My name is Oscar Herrada I am a <em><strong>Web Developer</strong></em>, <em><strong>Author</strong></em>, and owner of <em><strong>educatinglittleminds.</strong></em></p>
-      </div>
-        <hr class="yellowhr">
-       <div class="skills">
-        <h2>My Skills.</h2>
-       <div class="skill-row">
-        <img class="devimg" src="html.png" alt="devimg">
-        <h3>Web Development</h3>
-        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
-       </div>
-       <div class="skill-row">
-         <img class="" src="" alt="">
-        <div class="space">
-        </div>
-         <h3>Owner</h3>
-         <p>Owner of educatinglittleminds an eduaction based company aiming to provide quality books, teaching resources, and apps at an affordable cost.</p>
-         <hr class="orangehr">
-        <div class="container2">
-         <div>
-          <img class="artist" src="pen.png" alt="pen">
-         </div>
-          <img class="pencil" src="pencil.png" alt="pencil" id="pencil1">
-         </div>
-          <h3>Author</h3>
-          <p>In an attempt to break from self-made limitations I decided to become an author, illustrating and writing educational books.
-         </div>
-         </div>
-         <hr class="yellowhr">
-         <div class="contact-me">
-           <h2>Get In Touch</h2>
-           <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-           <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-          <img class="contact" src="icons/png/020-adaptive.png" alt="contact">
-          <br>
-           <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
-          </div>
-         </div>
-         <div class="bottom-container">
-          <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-          <a class="footer-link" href="https://twitter.com/">Twitter</a>
-          <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-          <p>© 2019 Oscar Herrada.</p>
-         <div>Icons made by <a href="https://www.freepik.com/?__hstc=57440181.2aff5be4d0f5ec4591611f8ff610e08c.1558229996609.1558229996609.1558265116243.2&__hssc=57440181.17.1558265116243&__hsfp=2517661048" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" 		    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 		    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
-         </div>
-         </div>
-     </body>
-    </html>
+
+<head>
+  <meta charset="utf-8">
+  <title>Oscar Herrada</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace|Overpass|Shadows+Into+Light&display=swap" rel="stylesheet">
+</head>
+
+<body>
+  <div class="city">
+    <img class="cloud1" src="cloud.png" alt="cloud-img">
+    <div class="name">I'm Oscar
+    </div>
+    <div class="dev">a developer
+    </div>
+    <img class="cloud2" src="cloud.png" alt="cloud-img">
+  </div>
+  <div class="intro">
+    <img class="OHLogo" src="suit_businessman.png" alt="logo">
+    <h2>Hello</h2>
+    <p>My name is Oscar Herrada I am a <em><strong>Web Developer</strong></em>, <em><strong>Author</strong></em>, and operator of <em><strong>educatinglittleminds.</strong></em></p>
+  </div>
+  <hr class="outhr">
+  <h2>Who I Am</h2>
+  <br>
+  <div class="skills">
+    <img class="devimg" src="html.png" alt="devimg">
+    <h3 class="h1">Web Developer</h3>
+    <div class="layer">
+    </div>
+    <p class="p1">Currently taking a Web Development Bootcamp developed by <a class="booklink" href="https://www.appbrewery.co/">Angela Yu</a> (founder of the App Brewery) at <a class="booklink"
+        href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">Udemy.com</a> to pursue a career within the field, looking foward to completing this current portfolio project and finishing the course so I may continue my education
+      towards App Development and Machine Learning & A.I</p>
+  </div>
+  <div class="author">
+    <img class="artist" src="pnp.png" alt="pnp img">
+    <h3 class="h2">Author</h3>
+    <div class="layer">
+    </div>
+    <p class="p2">I wrote and illustrated a book titled <a class="booklink"
+        href="https://www.amazon.com/Color-Yellow-educating-little-minds/dp/1733854312?SubscriptionId=AKIAILSHYYTFIVPWUY6Q&tag=duckduckgo-d-20&linkCode=xm2&camp=2025&creative=165953&creativeASIN=1733854312">More than the Color Yellow.</a>
+      <br>Going over the three main forms of light we receive from the Sun, the book aims to provide introductory material on one of the biggest reasons for LIFE. </p>
+  </div>
+  <div class="owner">
+    <img class="elm" src="ELM.png" alt="educatinglittleminds logo">
+    <h3 class="h3">Operator</h3>
+    <div class="layer">
+    </div>
+    <p class="p1">Founded with my Wife, I am the operator of educatinglittleminds an education company aiming to provide STEM books, teaching resources, and apps at an affordable cost.</p>
+  </div>
+  <hr class="outhr">
+  <div class="contact-me">
+    <h2>Get In Touch</h2>
+    <h3>Looking foward to helping out in anyway I have the ability to.</h3>
+    <p class="getintouch">From Web Design/Development, Book collaboration, to discussing over Education
+      <br> need or want assistance just..</p>
+    <a class="btn" href="mailto:educatinglittleminds@outlook.com">CONTACT ME</a>
+    <br>
+    <p class="getintouch">Let's get it done.</p>
+  </div>
+  <div class="layer2">
+  </div>
+  <br>
+  <a class="footer-link" href="https://www.linkedin.com/in/oscar-herrada-24460a127/">LinkedIn</a>
+  <a class="footer-link" href="https://www.instagram.com/oscarherrada/">Instagram</a>
+  <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+  <p class="copyright">© 2019 Oscar Herrada</p>
+  <div class="bottomfooter-link">Icons made by <a class="bottomfooter-link"
+      href="https://www.freepik.com/?__hstc=57440181.2aff5be4d0f5ec4591611f8ff610e08c.1558229996609.1558229996609.1558265116243.2&__hssc=57440181.17.1558265116243&__hsfp=2517661048" title="Freepik">Freepik</a> from <a class="bottomfooter-link"
+      href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a class="bottomfooter-link" href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY
+      <br> Free vector art via <a class="bottomfooter-link" rel="nofollow" href="https://www.vecteezy.com/">Vecteezy</a></a></div>
+
+</body>
+
+</html>
