--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Oscar Herrada</title>
-  <link rel="stylesheet" href="https://github.com/oherrada/cv-2019/blob/master/styles.css">
+  <link rel="stylesheet" href="https://oherrada.github.io/cv-2019/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace|Overpass|Shadows+Into+Light&display=swap" rel="stylesheet">
 </head>
 
